manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: demoapp
  name: back
  namespace: demoapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demoapp
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: demoapp
    spec:
      restartPolicy: Always
      imagePullSecrets:
      - name: regcred
      containers:
      - image: images.aramcoinnovations.com/demoapp/backend:v1.0
        resources: {}
        imagePullPolicy: IfNotPresent
        name: mmiapp
        ports:
        - containerPort: 8088
          protocol: TCP
