manifest/frontdeply.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: demoapp-ui
  name: demoapp-frontend
  namespace: demoapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demoapp-ui
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: demoapp-ui
    spec:
      restartPolicy: Always
      containers:
      - image: images.aramcoinnovations.com/demoapp/frontend:v1.0
        resources: {}
        imagePullPolicy: IfNotPresent
        name: demoapp-frontend
        ports:
        - containerPort: 8088
          protocol: TCP
        volumeMounts:
        - name: config-volume
          mountPath: /etc/nginx/conf.d/nginx.conf
          subPath: nginx.conf
      volumes:
      - name: config-volume
        configMap:
          name: nginx
