manifest/service.yaml
---
apiVersion: v1 
kind: Service 
metadata: 
  name: demoapp
  namespace: demoapp
spec: 
  type: ClusterIP
  selector: 
    app: demoapp
  ports: 
  - port: 8088
    name: http
---
apiVersion: v1 
kind: Service 
metadata: 
  name: demoapp-ui
  namespace: demoapp
spec: 
  type: ClusterIP
  selector: 
    app: demoapp-ui
  ports: 
  - port: 8088
    name: http
