manifest/ingress.yaml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: mmi-nginx-ingress
    namespace: mmi
  spec:
    ingressClassName: nginx
    rules:
      - host: mmi.aramcoinnovations.com
        http:
          paths:
            - pathType: Prefix
              backend:
                service:
                  name: mmiapp-ui
                  port:
                    number: 8080
              path: /
    # This section is only required if TLS is to be enabled for the Ingress
    tls:
      - hosts:
        - mmi.aramcoinnovations.com
        secretName: aic-cert
